# .dot-config

./: .Xresources  .Xresources-tian  .Xresources-x1c  .Xresources-x230  .bashrc.local  .ctags  .default-cargo-crates  .default-python-packages  .dotfilesrc  .dprint.conf  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .gtkrc-2.0  .i3status.conf  .mostrc  .mpdconf  .mpdconf-macos  .pullv.yaml  .pythonrc  .pyvimrc  .tern-config  .tigrc  .tmuxp.yaml  .tool-versions  .vcspull.yaml  .xprofile  .xsessionrc  .ycm_extra_conf.py  .zsh_plugins.txt  .zshenv  .zshrc  CLAUDE.md  CREDITS.md  Makefile  README  README.md  README.rst  WSL-notes.md  (+11 more)
.claude-plugin/: plugin.json
.dgen/: dgenrc
.i3/: config  i3pystatus_config.py
.ipython/profile_default/: ipython_config.py
.ncmpcpp/: bindings  config
.oh-my-zsh/custom/: pure.zsh-theme
.ptpython/: config.py
.screenlayout/: dual-monitor-2020.sh  dual-monitor.sh  external-vp.sh  one-monitor.sh
.shell/: aliases.sh  fn.sh  functions.sh
.shell/completions.d/: django
.shell/env/: activator.sh  base16-shell.sh  composer.sh  dircolors.sh  lightdm.sh  linuxbrew.sh  macports_python.sh  oh-my-zsh.zsh  perlbrew.sh  postgres.sh  prezto.zsh  tmuxp.sh  virtualenvwrapper.sh
.shell/env.d/: base16-shell.sh  cabal.sh  dephell.sh  docker-machine.sh  elasticbeanstalk.sh  hadoop.sh  heroku.sh  java.sh  keychain.sh  most.sh  npm.sh  nvm.sh  oh-my-zsh.zsh  opam.sh  p4a.sh  perlbrew.sh  plan9.sh  poetry.sh  prezto.zsh  pyenv.sh  python-breakpoint.sh  rbenv.sh  ssh-agent.sh  travis.sh  virtualenvwrapper.sh
.shell/fn.d/: git-rebase-each-run.zsh
.shell/paths.d/: aws.sh  brew_python.sh  depot_tools.sh  golang.sh  haskell.sh  npm.sh  opam.sh  postgres_app.sh  python.sh  rust.sh  serverless.sh  yarn.sh
.shell/vars.d/: fzf.sh  ignore.sh
.snes96_snapshots/: snes9x.conf
.ssh/: config
.tmuxp/: angular.yaml  braintree.yaml  cpython.yaml  flask.yaml  freebsd.yaml  js-frontend.yaml  logbook.yaml  npr-flexget.yaml  ocaml.yaml  pandas.yaml  pump.io.yaml  readthedocs.org.yaml  saltstack.yaml  sphinx.yaml  sphinx_rtd_theme.yaml  sqlalchemy.yaml  tornado.yaml  warehouse.yaml
.tmuxp/devops/: salt-master.yaml
.tmuxp/python/: anyvcs.yaml  logbook.yaml  sqlalchemy.yaml  tornado.yaml
.vcspull/: peergrade.yaml  work.yaml
.vim/: bootstrap.vim  check_bundles.vim
.zfunc/: .gitignore
claude/: settings.json
commands/: bump.md
config/: starship-fast.toml  starship.toml
config/Code/User/: settings.json
config/autostart/: mpd.desktop
config/direnv/: direnvrc
config/direnv/lib/: use_asdf.sh
config/dunst/: alert.sh  dunstrc
config/fcitx/: .gitignore  config
config/fcitx/conf/: fcitx-clipboard.config
config/fish/: .editorconfig  config.fish  fish_plugins  fish_variables
config/fish/completions/: asdf.fish  aws.fish  terraform.fish
config/fish/conf.d/: asdf.fish  fish-poetry.fish  fish_venv.fish  fzf.conf.fish  fzf_custom.fish  fzf_mgr.fish
config/fish/functions/: _fzf_search_history.fish  bench.fish  deep_reset_git_repos.fish  fish_user_key_bindings.fish  fzf_key_bindings.fish  fzf_mgr.fish  git-rebase-each-run.fish  git_branch_history_diff.fish  git_branch_history_log.fish  rerun.fish  shell_bench.fish
config/fish/tests/: run_all_tests.sh  run_test.sh  run_tests.fish  test_fish_venv.fish  test_fzf_mgr.fish  test_shell_bench.fish
config/fontconfig/conf.d/: 01-emoji.conf  10-symbols.conf  11-timesnrt-for-pdfs.conf
config/gammastep/: config.ini
config/gitui/: theme.ron  theme.ron.old
config/gtk-3.0/: settings.ini
config/htop/: htoprc
config/kitty/: gruvbox.conf  kitty.conf
config/mise/: .gitignore  config.toml
config/nvim/: init.lua  init.vim  lazy-lock.json
config/redshift/: redshift.conf
config/sheldon/: plugins.toml
config/spotdl/: config.yml
config/sway/: config
config/vcspull/: peergrade.yaml  pep.yaml  work.yaml
games/dota2/: autoexec.cfg
os/bsd/boot/: device.hints  loader.conf
os/bsd/dota/: autoexec.cfg
os/bsd/etc/: dhclient.conf  make.conf  rc.conf  sysctl.conf
os/bsd/home/: .mpdconf  .xinitrc
os/bsd/notes/: battle.net.md  battle.net.rst  mpd.md  mpd.rst  zfs.rst  (+2 more)
os/linux/: notes.md
os/w11/: README.md  winget-packages.json
os/wsl/: notes.md  notes.rst
scripts/: shell_perf.sh  test_mise_cache.fish
skills/changelog-registry/: SKILL.md
skills/commit-conventions/: SKILL.md
systems/tian/: set-monitor.sh
(+37 files in other folders)
